# sparkle-talk-forge

./: .gitignore  README.md  README_old.md  index.html  main.py  pyproject.toml  tailwind.config.ts
backend/: __init__.py  cache.py  chunker.py  download_weights.py  hallucination.py  models.py  prompts.py  rag_server.py  retriever.py  router.py  server.py
frontend/: index.html  vercel.json  vite.config.ts
frontend/src/components/chat/: Composer.tsx  MessageBubble.tsx  Welcome.tsx
frontend/src/lib/: chatTypes.ts  mockLlm.ts  theme.tsx
frontend/src/pages/: Index.tsx
src/: index.css
src/components/chat/: Composer.tsx  MessageBubble.tsx  Sidebar.tsx  Welcome.tsx
src/lib/: chatTypes.ts
src/pages/: Index.tsx
